fix: changed font and removed flicker

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap');
+
 @layer base {
   body {
-    @apply font-[Roboto];
+    @apply font-[Lato];
   }
 }
 
